--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,12 @@ body{
     position: absolute !important;
     top: -9999px !important;
 }
+
+/* Actions */
+.actions {
+    position: absolute;
+    bottom: 0%;
+    width: 100%;
+    height: 80px;
+    background-color: #343A40;
+}
