--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,20 @@ body{
     position: absolute;
     bottom: 0%;
     width: 100%;
-    height: 80px;
+    height: 70px;
     background-color: #343A40;
+}
+
+.actions-btn {
+    margin-right: 20px;
+    margin-top: 15px;
+}
+
+@media screen and (max-width: 800px) {
+    .actions-btn {
+        margin-top: 15px; 
+        margin-bottom: 15px; 
+        padding: 5px;
+        font-size: 95%;
+    }
 }
