--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body{
     position: fixed;
     bottom: 0%;
     width: 100%;
-    height: 70px;
+    min-height: 70px;
     background-color: #343A40;
 }
 
